Created example to change data

--- a/MurderRate-Income-HighestEd.html
+++ b/MurderRate-Income-HighestEd.html
@@ -1,10 +1,4 @@
 <html>
     <head></head>
-    <body><strong>Means:</strong> High School or Higher Education<br>Average Household Income<br>Poverty Rate<br><strong>Targets:</strong> >= 7 Murder Rate<br>Below 7 Murder Rate<br>87.762
-53396.356
-14.573
-85.540
-54693.400
-17.100
-<br>Number of mislabeled points out of a total 50 points : 6</body>
+    <body><strong>Means:</strong> High School or Higher Education<br>Average Household Income<br>Poverty Rate<br><strong>Targets:</strong> >= 7 Murder Rate<br>Below 7 Murder Rate<br>87.762&emsp;53396.356&emsp;14.573&emsp;<br>85.540&emsp;54693.400&emsp;17.100&emsp;<br>Number of mislabeled points out of a total 50 points : 6</body>
     </html>
